--- a/java/build.gradle
+++ b/java/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'com.google.protobuf'
+apply plugin: 'com.google.osdetector'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 sourceCompatibility = 1.8
@@ -13,6 +14,7 @@ buildscript {
 
   dependencies {
     classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.0'
+    classpath 'com.google.gradle:osdetector-gradle-plugin:1.4.0'
     classpath "com.github.jengelman.gradle.plugins:shadow:1.2.3"
   }
 }
@@ -54,11 +56,17 @@ dependencies {
   compile fileTree(include: ['*.jar'], dir: 'lib')
 
   compile group: 'com.google.guava', name: 'guava', version: '+'
+  compile group: 'commons-codec', name: 'commons-codec', version: '+'
 
-  compile group: 'io.grpc', name: 'grpc-netty', version: '1.0.0'
-  compile group: 'io.grpc', name: 'grpc-protobuf', version: '1.0.0'
-  compile group: 'io.grpc', name: 'grpc-stub', version: '1.0.0'
+  compile group: 'io.grpc', name: 'grpc-netty', version: '1.0.1'
+  compile group: 'io.grpc', name: 'grpc-protobuf', version: '1.0.1'
+  compile group: 'io.grpc', name: 'grpc-stub', version: '1.0.1'
 
+  compile group: 'io.netty', name: 'netty-tcnative-boringssl-static', version: '+'//'1.1.33.Fork19'
+  //compile group: 'io.netty', name: 'netty-tcnative', version: '+'//'1.1.33.Fork19'
+
+  compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.55'
+  compile group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.55'
 }
 
 
@@ -94,5 +102,12 @@ jar {
     )
   }
 }
+
+compileJava {
+  options.compilerArgs << '-XDignore.symbol.file'
+  options.fork = true
+  options.forkOptions.executable = 'javac'
+}
+
 
 defaultTasks "shadowJar"
